Unsuccessfully attempt to resolve issues with canvas and keyboard overlap on resize.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+* {
+  border: 1px solid red;
+}
+
 html, body {
   padding: 0;
   margin: 0;
@@ -50,11 +54,20 @@ html, body {
     }
   }
 
-  // .helper {
-  //   height: 250px;
-  // }
+  .helper {
+  width: 100vw;
+  height: 220px;
+  float: left;
+}
   
 }
+
+// <div id="spacer" style="width: 200px; height: 100px; float:left; display:inline-block"></div>
+// .helper {
+//   width: 100vw;
+//   height: 220px;
+//   float: left;
+// }
 
 #keyboard {
   border: none;
@@ -65,6 +78,7 @@ html, body {
   bottom: 5px;
   right: 5px;
   left: 5px;
+  
   
     .white-key {
       border: 1px solid #000;
